syntax = "proto3";

package proto;
option go_package = "github.com/vpnhouse/tunnel/proto";

import "timestamp.proto";

// PeerInfo describes the peer interacting with the tunnel node
message PeerInfo {
  string userID = 1;
  string installationID = 2;
  string sessionID = 3;
  Timestamp created = 5;
  Timestamp updated = 6;
  Timestamp expires = 7;
  uint64 bytesTx = 8;
  uint64 bytesRx = 9;
  Timestamp activity = 10;
  string label = 11;
  uint64 bytesDeltaTx = 12;
  uint64 bytesDeltaRx = 13;
  uint64 seconds = 14;
  string activityID = 15;
  string country = 16;
  string protocol = 17;
}

// EventType defines types to use with the eventlog package
enum EventType {
  Unspecified = 0;
  PeerAdd = 1;
  PeerRemove = 2;
  PeerUpdate = 3;
  // PeerTraffic is for the periodic traffic updates
  PeerTraffic = 4;
  PeerFirstConnect = 5;
}

// Position in the evenlog to start/resume the events
message EventLogPosition {
  string log_id = 1;
  int64 offset = 2;
}
